web/packages/web-client/styles/pages/scorecard.scss
@import '../variables/colors.scss';
@import '../variables/margins.scss';
#theme-site {
  #scorecard {
    display: flex;
    width: 100%;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    align-content: flex-start;
    overflow: scroll;
    .issues-section {
      display: flex;
      flex-direction: column;
      align-items: flex-start;
      width: 100%;
      &:nth-child(n + 2) {
        margin-top: $margin * 2;
      }
      flex: 1 0 auto;
    }
    .deemph {
      color: $light-gray;
    }
    .emph {
      color: $red;
    }
    table {
      width: 100%;
      margin-top: $margin;
    }
    tr {
      display: table-row;
      outline: none;
      height: 30px;
      a {
        &:not(:last-child) {
          &:after {
            content: ', ';
          }
        }
      }
      td {
        padding-right: $margin;
      }
    }
    th {
      color: $black;
      font-size: 0.75rem;
      text-align: left;
      display: table-cell;
      text-align: left;
      border-bottom: 1px solid $light-gray;
      vertical-align: inherit;
      padding-right: $margin;
    }
    #random-user {
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: center;
      margin-top: $margin;
      img {
        cursor: pointer;
      }
      span {
        margin-left: $margin;
      }
    }
  }
}

